--- a/.github/workflows/Stand_by.yml
+++ b/.github/workflows/Stand_by.yml
@@ -43,29 +43,25 @@ jobs:
               return 1
           }
           
-          # Function to send email notification
-          send_email_notification() {
-              local subject="$1"
-              local body="$2"
+          # Function to send Telegram notification
+          send_telegram_notification() {
+              local message="$1"
               
-              if [ -z "$EMAIL_SMTP_USER" ] || [ -z "$EMAIL_SMTP_PASS" ]; then
-                  echo "⚠️ Email credentials not configured, skipping email notification"
+              if [ -z "$TELEGRAM_BOT_TOKEN" ] || [ -z "$TELEGRAM_CHAT_ID" ]; then
+                  echo "⚠️ Telegram credentials not configured, skipping notification"
                   return 1
               fi
               
-              echo "Sending email notification: $subject"
-              local email_content="From: $EMAIL_FROM\nTo: $EMAIL_TO\nSubject: $subject\n\n$body"
+              echo "📱 Sending Telegram notification: $message"
               
-              if curl -s --url 'smtps://smtp.gmail.com:465' \
-                   --ssl-reqd \
-                   --mail-from "$EMAIL_FROM" \
-                   --mail-rcpt "$EMAIL_TO" \
-                   --user "$EMAIL_SMTP_USER:$EMAIL_SMTP_PASS" \
-                   -T <(echo -e "$email_content") > /dev/null 2>&1; then
-                  echo "✅ Email notification sent successfully"
+              if curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+                   -d "chat_id=${TELEGRAM_CHAT_ID}" \
+                   -d "text=${message}" \
+                   -d "parse_mode=Markdown" > /dev/null 2>&1; then
+                  echo "✅ Telegram notification sent successfully"
                   return 0
               else
-                  echo "❌ Failed to send email notification"
+                  echo "❌ Failed to send Telegram notification"
                   return 1
               fi
           }
@@ -91,12 +87,12 @@ jobs:
                       return 0
                   else
                       echo "❌ Failed to cancel RDP workflow"
-                      send_email_notification "RDP Cancellation Failed" "Failed to cancel RDP email workflow (Run ID: $run_id). Manual intervention may be required."
+                      send_telegram_notification "🚫 *RDP Cancellation Failed*\n\nFailed to cancel RDP email workflow (Run ID: $run_id). Manual intervention may be required."
                       return 1
                   fi
               else
                   echo "ℹ️ No running RDP email workflow found to cancel"
-                  send_email_notification "RDP Workflow Not Found" "No running RDP email workflow found to cancel when Stop_rdp command was received. The workflow may have already completed or failed."
+                  send_telegram_notification "ℹ️ *RDP Workflow Not Found*\n\nNo running RDP email workflow found to cancel when Stop_rdp command was received. The workflow may have already completed or failed."
                   return 1
               fi
           }
@@ -132,7 +128,7 @@ jobs:
                   fi
                   
                   echo "🏁 Standby monitoring stopped by user command"
-                  exit 0
+                  exit 1  # Exit with failure status to prevent next step from running
               fi
               
               # Wait 10 minutes before next check
