--- a/.github/workflows/Call_RDP_email.yml
+++ b/.github/workflows/Call_RDP_email.yml
@@ -68,33 +68,25 @@ jobs:
       - name: Send RDP Trigger Notification
         if: always()  # Send notification regardless of workflow status
         env:
-          EMAIL_SMTP_USER: ${{ secrets.EMAIL_SMTP_USER }}
-          EMAIL_SMTP_PASS: ${{ secrets.EMAIL_SMTP_PASS }}
-          EMAIL_FROM: ${{ secrets.EMAIL_FROM }}
-          EMAIL_TO: ${{ secrets.EMAIL_TO }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          echo "📧 Sending RDP trigger notification email..."
+          echo "📱 Sending RDP trigger notification via Telegram..."
           
-          # Check if email credentials are configured
-          if [ -z "$EMAIL_SMTP_USER" ] || [ -z "$EMAIL_SMTP_PASS" ]; then
-              echo "⚠️ Email credentials not configured, skipping notification"
+          # Check if Telegram credentials are configured
+          if [ -z "$TELEGRAM_BOT_TOKEN" ] || [ -z "$TELEGRAM_CHAT_ID" ]; then
+              echo "⚠️ Telegram credentials not configured, skipping notification"
               exit 0
           fi
           
-          # Send notification using curl
-          subject="RDP Successfully Triggered"
-          body="RDP workflows have been successfully triggered. Please wait for the RDP access codes to be sent to your email. The system will monitor for 6 hours or until you send 'Stop_rdp' via Telegram."
+          # Send notification using Telegram API
+          message="🚀 *RDP Successfully Triggered*\n\nRDP workflows have been successfully triggered. Please wait for the RDP access codes to be sent to your email. The system will monitor for 6 hours or until you send 'Stop_rdp' via Telegram."
           
-          # Create proper email format
-          email_content="From: $EMAIL_FROM\nTo: $EMAIL_TO\nSubject: $subject\n\n$body"
-          
-          if curl -s --url 'smtps://smtp.gmail.com:465' \
-               --ssl-reqd \
-               --mail-from "$EMAIL_FROM" \
-               --mail-rcpt "$EMAIL_TO" \
-               --user "$EMAIL_SMTP_USER:$EMAIL_SMTP_PASS" \
-               -T <(echo -e "$email_content") > /dev/null 2>&1; then
-              echo "✅ RDP trigger notification sent successfully"
+          if curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+               -d "chat_id=${TELEGRAM_CHAT_ID}" \
+               -d "text=${message}" \
+               -d "parse_mode=Markdown" > /dev/null 2>&1; then
+              echo "✅ RDP trigger notification sent successfully via Telegram"
           else
-              echo "⚠️ Failed to send trigger notification (non-critical)"
+              echo "⚠️ Failed to send trigger notification via Telegram (non-critical)"
           fi
