--- a/.github/workflows/Start_whole_WorkFlow.yml
+++ b/.github/workflows/Start_whole_WorkFlow.yml
@@ -24,24 +24,40 @@ jobs:
           # Function to send Telegram notification
           send_telegram_notification() {
               local message="$1"
+              local max_retries=3
+              local retry_count=0
               
               if [ -z "$TELEGRAM_BOT_TOKEN" ] || [ -z "$TELEGRAM_CHAT_ID" ]; then
                   echo "⚠️ Telegram credentials not configured, skipping notification"
                   return 1
               fi
               
-              echo "📱 Sending Telegram notification: $message"
+              while [ $retry_count -lt $max_retries ]; do
+                  echo "📱 Attempt $((retry_count + 1)): Sending Telegram notification"
+                  
+                  response=$(curl -s -w "%{http_code}" -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+                       -d "chat_id=${TELEGRAM_CHAT_ID}" \
+                       -d "text=${message}" \
+                       -d "parse_mode=Markdown" \
+                       -d "disable_web_page_preview=true")
+                  
+                  http_code="${response: -3}"
+                  
+                  if [ "$http_code" = "200" ]; then
+                      echo "✅ Telegram notification sent successfully"
+                      return 0
+                  else
+                      echo "❌ Failed to send notification (HTTP: $http_code)"
+                      if [ $retry_count -lt $((max_retries - 1)) ]; then
+                          echo "⏳ Retrying in 3 seconds..."
+                          sleep 3
+                      fi
+                  fi
+                  retry_count=$((retry_count + 1))
+              done
               
-              if curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
-                   -d "chat_id=${TELEGRAM_CHAT_ID}" \
-                   -d "text=${message}" \
-                   -d "parse_mode=Markdown" > /dev/null 2>&1; then
-                  echo "✅ Telegram notification sent successfully"
-                  return 0
-              else
-                  echo "❌ Failed to send Telegram notification"
-                  return 1
-              fi
+              echo "❌ Failed to send Telegram notification after $max_retries attempts"
+              return 1
           }
           
           # Function to trigger Call RDP email workflow
@@ -61,16 +77,16 @@ jobs:
                   echo "🔁 Rerunning Call RDP email run ID: $run_id"
                   if gh run rerun $run_id --repo "${{ github.repository }}"; then
                       echo "✅ Call RDP email workflow triggered successfully"
-                      send_telegram_notification "🚀 *RDP Workflow Started*\\n\\nCall RDP email workflow has been triggered. RDP setup will begin shortly."
+                      send_telegram_notification "🚀 *RDP Workflow Started*\\n\\n✅ Call RDP email workflow triggered\\n✅ RDP server setup initiated\\n\\n📧 *Next:* Wait for email with RDP credentials\\n🔗 *Monitor:* [GitHub Actions](https://github.com/${{ github.repository }}/actions)"
                       return 0
                   else
                       echo "❌ Failed to trigger Call RDP email workflow"
-                      send_telegram_notification "❌ *RDP Workflow Trigger Failed*\\n\\nFailed to trigger Call RDP email workflow. Manual intervention required."
+                      send_telegram_notification "❌ *RDP Workflow Failed*\\n\\n❌ Failed to trigger Call RDP email workflow\\n\\n🔧 *Action:* Check [GitHub Actions logs](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})\\n🔄 *Fallback:* Trying alternative startup method..."
                       return 1
                   fi
               else
                   echo "❌ No Call RDP email workflow found to rerun"
-                  send_telegram_notification "❌ *RDP Workflow Not Found*\\n\\nNo Call RDP email workflow found to trigger."
+                  send_telegram_notification "❌ *RDP Workflow Not Found*\\n\\n⚠️ No Call RDP email workflow available\\n\\n🔧 *Solution:* Try running workflows manually from [GitHub Actions](https://github.com/${{ github.repository }}/actions)"
                   return 1
               fi
           }
