--- a/.github/workflows/Stand_by.yml
+++ b/.github/workflows/Stand_by.yml
@@ -25,39 +25,58 @@ jobs:
           # Function to send Telegram notification
           send_telegram_notification() {
               local message="$1"
+              local max_retries=3
+              local retry_count=0
               
               if [ -z "$TELEGRAM_BOT_TOKEN" ] || [ -z "$TELEGRAM_CHAT_ID" ]; then
                   echo "⚠️ Telegram credentials not configured, skipping notification"
                   return 1
               fi
               
-              echo "📱 Sending Telegram notification: $message"
+              while [ $retry_count -lt $max_retries ]; do
+                  echo "📱 Attempt $((retry_count + 1)): Sending Telegram notification"
+                  
+                  response=$(curl -s -w "%{http_code}" -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
+                       -d "chat_id=${TELEGRAM_CHAT_ID}" \
+                       -d "text=${message}" \
+                       -d "parse_mode=Markdown" \
+                       -d "disable_web_page_preview=true")
+                  
+                  http_code="${response: -3}"
+                  
+                  if [ "$http_code" = "200" ]; then
+                      echo "✅ Telegram notification sent successfully"
+                      return 0
+                  else
+                      echo "❌ Failed to send notification (HTTP: $http_code)"
+                      if [ $retry_count -lt $((max_retries - 1)) ]; then
+                          echo "⏳ Retrying in 3 seconds..."
+                          sleep 3
+                      fi
+                  fi
+                  retry_count=$((retry_count + 1))
+              done
               
-              if curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage" \
-                   -d "chat_id=${TELEGRAM_CHAT_ID}" \
-                   -d "text=${message}" \
-                   -d "parse_mode=Markdown" > /dev/null 2>&1; then
-                  echo "✅ Telegram notification sent successfully"
-                  return 0
-              else
-                  echo "❌ Failed to send Telegram notification"
-                  return 1
-              fi
+              echo "❌ Failed to send Telegram notification after $max_retries attempts"
+              return 1
           }
           
-          # Function to check for stop command via Telegram (legacy polling as backup)
+          # Function to check for stop command via Telegram with improved parsing
           check_telegram_messages() {
               if [ -z "$TELEGRAM_BOT_TOKEN" ] || [ -z "$TELEGRAM_CHAT_ID" ]; then
                   echo "⚠️ Telegram credentials not configured, skipping telegram check"
                   return 1
               fi
               
-              # Get latest messages from Telegram
-              response=$(curl -s "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/getUpdates?chat_id=${TELEGRAM_CHAT_ID}&limit=10")
+              # Get latest messages from Telegram (last 10 messages)
+              response=$(curl -s "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/getUpdates?chat_id=${TELEGRAM_CHAT_ID}&limit=10&timeout=10")
               
-              # Check if any message contains "Stop_rdp"
-              if echo "$response" | grep -q "Stop_rdp"; then
+              # Enhanced parsing - check for various stop command formats
+              if echo "$response" | grep -iE "(Stop_rdp|stop_rdp|STOP_RDP|stop rdp|Stop RDP)"; then
                   echo "🛑 Stop_rdp command received via Telegram!"
+                  
+                  # Send acknowledgment
+                  send_telegram_notification "🛑 *Stop Command Received*\n\n✅ Processing stop request...\n🚫 Canceling RDP session\n⏳ Please wait..."
                   return 0
               fi
               return 1
@@ -84,12 +103,12 @@ jobs:
                       return 0
                   else
                       echo "❌ Failed to cancel RDP workflow"
-                      send_telegram_notification "🚫 *RDP Cancellation Failed*\\n\\nFailed to cancel RDP email workflow (Run ID: $run_id). Manual intervention may be required."
+                      send_telegram_notification "🚫 *RDP Cancellation Failed*\\n\\n❌ Failed to cancel RDP email workflow\\n🆔 Run ID: $run_id\\n\\n🔧 *Action Required:* Manual intervention needed\\n🔗 [Check GitHub Actions](https://github.com/${{ github.repository }}/actions/runs/$run_id)"
                       return 1
                   fi
               else
                   echo "ℹ️ No running RDP email workflow found to cancel"
-                  send_telegram_notification "ℹ️ *RDP Workflow Not Found*\\n\\nNo running RDP email workflow found to cancel when Stop_rdp command was received. The workflow may have already completed or failed."
+                  send_telegram_notification "ℹ️ *RDP Session Status*\\n\\n⚠️ No active RDP session found when stop command received\\n\\n📝 *Possible reasons:*\\n• Session already completed\\n• Session failed to start\\n• Session timed out\\n\\n🔗 [Check logs](https://github.com/${{ github.repository }}/actions) for details"
                   return 1
               fi
           }
@@ -104,7 +123,9 @@ jobs:
               # Check for stop command (backup polling - webhook is primary)
               if check_telegram_messages; then
                   echo "🛑 Stop command detected via polling - canceling RDP and exiting"
-                  cancel_rdp_workflow
+                  if cancel_rdp_workflow; then
+                      send_telegram_notification "✅ *RDP Session Stopped*\n\n✅ RDP workflow canceled successfully\n✅ Session terminated by user request\n\n📋 *Summary:*\n• Duration: $(($(date +%s) - $(date +%s -d "6 hours ago"))) seconds\n• Status: Manually stopped\n• Next: Ready for new session"
+                  fi
                   
                   # Trigger Start whole WorkFlow when Stop_rdp is received
                   echo "🔁 Triggering Start whole WorkFlow after Stop_rdp command"
@@ -134,6 +155,7 @@ jobs:
           done
           
           echo "⏰ 6-hour monitoring period completed without stop command"
+          send_telegram_notification "⏰ *RDP Session Timeout*\n\nℹ️ 6-hour monitoring period completed\n✅ No stop command received\n🔄 Preparing to restart RDP session\n\n📋 *Session Summary:*\n• Duration: 6 hours (full timeout)\n• Status: Auto-expired\n• Next: Automatic restart"
 
       - name: Rerun Call RDP email workflow
         if: success()  # Only run if no stop command was received
