--- a/.github/workflows/Start_whole_WorkFlow.yml
+++ b/.github/workflows/Start_whole_WorkFlow.yml
@@ -90,37 +90,66 @@ jobs:
                   return 1
               fi
           }
+                    
+          echo "⏳ Waiting for start_rdp message (max 6h)..."
           
-          # Directly trigger RDP workflow (no more polling needed)
-          echo "🚀 start_rdp command received via webhook - triggering RDP workflows"
-          if trigger_call_rdp_email; then
-              echo "🏁 Start workflow completed successfully"
-              exit 0  # Success - don't trigger on.yml
+          MAX_WAIT=$((360 * 60 - 300))  # wait 5h55m (leave 5 min buffer before GitHub kills job)
+          INTERVAL=60                   # check every 1 min
+          waited=0
+          message_received=false
+          
+          while [ $waited -lt $MAX_WAIT ]; do
+              # Poll Telegram for /start_rdp command
+              updates=$(curl -s "https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/getUpdates?offset=-1")
+              
+              if echo "$updates" | grep -q "\"text\":\"/start_rdp\""; then
+                  echo "🚀 /start_rdp command detected from Telegram!"
+                  message_received=true
+                  break
+              fi
+          
+              echo "⏳ Still waiting... ($waited seconds elapsed)"
+              sleep $INTERVAL
+              waited=$((waited + INTERVAL))
+          done
+
+
+
+          
+          if [ "$message_received" = true ]; then
+              echo "✅ Triggering Call RDP email workflow..."
+              run_id=$(gh run list \
+                --workflow "Call RDP email" \
+                --repo "${{ github.repository }}" \
+                --branch "${{ github.ref_name }}" \
+                --limit 1 \
+                --json databaseId \
+                --jq ".[0].databaseId")
+          
+              if [ "$run_id" != "null" ] && [ -n "$run_id" ]; then
+                  echo "🔁 Rerunning Call RDP email run ID: $run_id"
+                  gh run rerun $run_id --repo "${{ github.repository }}"
+              else
+                  echo "❌ No Call RDP email workflow found to rerun"
+              fi
           else
-              echo "❌ Failed to trigger RDP workflows"
-              exit 1
+              echo "⚠️ No start_rdp received before timeout, triggering on.yml fallback..."
+              run_id=$(gh run list \
+                --workflow "on" \
+                --repo "${{ github.repository }}" \
+                --branch "${{ github.ref_name }}" \
+                --limit 1 \
+                --json databaseId \
+                --jq ".[0].databaseId")
+          
+              if [ "$run_id" != "null" ] && [ -n "$run_id" ]; then
+                  echo "🔁 Rerunning on workflow run ID: $run_id"
+                  gh run rerun $run_id --repo "${{ github.repository }}"
+                  echo "✅ on.yml workflow rerun triggered"
+              else
+                  echo "❌ No on.yml workflow found to rerun"
+              fi
           fi
 
-      - name: Fallback - Trigger on.yml workflow
-        if: failure()  # Only run if start workflow failed
-        env:
-          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          echo "🔄 RDP trigger failed, triggering on.yml workflow as fallback"
-          
-          # Get the latest on.yml workflow run
-          run_id=$(gh run list \
-            --workflow "on" \
-            --repo "${{ github.repository }}" \
-            --branch "${{ github.ref_name }}" \
-            --limit 1 \
-            --json databaseId \
-            --jq ".[0].databaseId")
 
-          if [ "$run_id" != "null" ] && [ -n "$run_id" ]; then
-              echo "🔁 Rerunning on workflow run ID: $run_id"
-              gh run rerun $run_id --repo "${{ github.repository }}"
-              echo "✅ on.yml workflow rerun triggered"
-          else
-              echo "❌ No on.yml workflow found to rerun"
-          fi
+     
